--- a/circular_stacked_barplot/circular_stacked_barplot.ipynb
+++ b/circular_stacked_barplot/circular_stacked_barplot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "circular_stacked_barplot.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlMizjjLGJion0tb3D4Wfw",
+      "authorship_tag": "ABX9TyOhhoWbwjIrV9fri6QtLwGD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Imports"
+        "## 1. Imports"
       ],
       "metadata": {
         "id": "ADFsmgojlqJq"
